corrected according to the comments

--- a/RJCIA2019/rfia2000.sty
+++ b/RJCIA2019/rfia2000.sty
@@ -48,6 +48,11 @@ minus3pt\let\@listi\@listI}
         {-1ex plus -.2ex minus -.2ex}{-1em}{\normalsize\bf}}
 \def\subparagraph{\@startsection {subparagraph}{4}{\parindent}
         {-1ex plus -.2ex minus -.2ex}{-1em}{\normalsize\bf}}
+
+% Paragraphs
+\parindent 1em
+\parskip 0pt plus 1pt
+
 \makeatother
 
 
